Bug 456133 - Touching a running application in WindowHeap-based effects using a touchscreen doesn't switch to it
Summary: Touching a running application in WindowHeap-based effects using a touchscree...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-overview (other bugs)
Version First Reported In: 5.25.2
Platform: Other Linux
: VHI normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression, wayland-only
: 456265 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-06-29 15:56 UTC by kelnio@yahoo.com
Modified: 2022-07-03 00:28 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kelnio@yahoo.com 2022-06-29 15:56:55 UTC
SUMMARY
When Overview mode is activated with multiple applications running on a touch screen device, tapping on one of the running applications using touch input does not switch to the selected application and close Overview.


STEPS TO REPRODUCE
On a device with a touchscreen:
1. Launch multiple applications from the menu or panel
2. Use a three finger swipe up on the touchscreen to activate Overview
3. Touch the middle of one of the running applications with your finger

OBSERVED RESULT
The application is highlighted every time it's touched, but Overview mode is never exited.

EXPECTED RESULT
When touched, the application should be switched to on the screen, and Overview should exit

SOFTWARE/OS VERSIONS
Linux: EndeavourOS (with latest updates), kernel 5.18.7-arch1-1-surface
KDE Plasma Version: 5.25.2
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.5

ADDITIONAL INFORMATION
Hardware: Microsoft Surface Pro 8 w/Intel Core i5 16GB RAM
Comment 1 Nate Graham 2022-06-29 15:59:45 UTC
Can confirm. This used to work but seems to have broken recently.

It affects all WindowHeap-based effects, too.
Comment 2 Nate Graham 2022-06-30 15:40:39 UTC
While debugging this I've found that it works perfectly on X11 and is only broken on Wayland.
Comment 3 Bug Janitor Service 2022-07-01 08:49:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2601
Comment 4 Vlad Zahorodnii 2022-07-01 12:13:24 UTC
Git commit 56d3b2ddc44c5a3590bbfd4bb9dc6cdd4be853c0 by Vlad Zahorodnii, on behalf of Marco Martin.
Committed on 01/07/2022 at 12:13.
Pushed by vladz into branch 'master'.

Set all timestamps for all touch events

in order for qml pointerhandlers to work correctly, they need
timestamps in all events (to decide for instance when to emit a
tapped or doubletapped)

M  +2    -4    src/libkwineffects/kwinoffscreenquickview.cpp

https://invent.kde.org/plasma/kwin/commit/56d3b2ddc44c5a3590bbfd4bb9dc6cdd4be853c0
Comment 5 Vlad Zahorodnii 2022-07-01 12:16:28 UTC
Git commit b079c8caa23f8b40733a45159f51607928596a4b by Vlad Zahorodnii, on behalf of Marco Martin.
Committed on 01/07/2022 at 12:16.
Pushed by vladz into branch 'Plasma/5.25'.

Set all timestamps for all touch events

in order for qml pointerhandlers to work correctly, they need
timestamps in all events (to decide for instance when to emit a
tapped or doubletapped)


(cherry picked from commit 56d3b2ddc44c5a3590bbfd4bb9dc6cdd4be853c0)

M  +2    -4    src/libkwineffects/kwinoffscreenquickview.cpp

https://invent.kde.org/plasma/kwin/commit/b079c8caa23f8b40733a45159f51607928596a4b
Comment 6 kelnio@yahoo.com 2022-07-01 21:15:19 UTC
Thanks for fixing this so quickly! Is there a way to apply the changes to 5.25.2 in Arch or do I need to wait two weeks for 5.25.3 to post?
Comment 7 Zamundaaa 2022-07-03 00:28:23 UTC
*** Bug 456265 has been marked as a duplicate of this bug. ***